# bevy_rts_sandox

./: Cargo.toml  README.md  gen.py
assets/: BACKROOMS_POLY_GAME.glb  basemodel.glb  basemodel.gltf  block.gltf  block_2.gltf  block_3.gltf  bounding_box.gltf  bullet.gltf  my_character_anamation.glb  my_character_anamation.gltf
assets/meshes/: basemodel.bbmodel  block.bbmodel  block_2.bbmodel  bounding_box.bbmodel  bullet.bbmodel  ship.bbmodel
src/: main.rs
src/components/: effects.rs  game.rs  mechanics.rs  mod.rs
src/constants/: camera.rs  constants.rs  mechanics.rs  mod.rs  plane.rs  units.rs
src/plugins/: animation.rs  cursor.rs  mod.rs
src/systems/: effects.rs  mod.rs  mouse.rs  movement.rs  rotation.rs  spawn_plane.rs  spawn_unit.rs  update_lights.rs
src/units/: mod.rs  skelly.rs
src/util/: mod.rs
