[package]
name = "rusty"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3

[dependencies]
bevy = {version = "0.9", features = ["dynamic"] }
bevy-inspector-egui = "0.14.0"
smooth-bevy-cameras = "0.6.0"
rapier3d = { version = "*", features = [ "simd-stable", "parallel" ] }
rand = "0.8.5"
bevy_mod_raycast = "0.7.0"
cargo-watch = "8.1.2"
bevy_rapier3d = { version = "*", features = [ "simd-stable", "debug-render", "parallel" ] }
bevy-scene-hook = "5.1.2"
